--- a/app/views/landing/index.html
+++ b/app/views/landing/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
 
-    <title>Landing Page &ndash; Layout Examples &ndash; Pure</title>
+    <title>StoryTime</title>
 
     <!-- Custom Font -->
     <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
@@ -32,58 +32,48 @@
         </div>
     </div>
 
-    <div class="splash-container">
+    <div class="splash-Container">
         <div class="splash">
-            <h1 class="splash-head">Big Bold Text</h1>
-            <p class="splash-subhead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </p>
-            <p>
-                <a href="#sign-up" class="pure-button pure-button-primary">Get Started</a>
-            </p>
+            <h1 class="splash-head" id="splash">StoryTime</h1>
         </div>
     </div>
 
-    <div class="content-wrapper">
+    <div class="content-wrapper" id="geninfo">
         <div class="content">
-            <h2 class="content-head is-center">Excepteur sint occaecat cupidatat.</h2>
+            <h2 class="content-head is-center">We make raising readers easy.</h2>
 
             <div class="pure-g">
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 
                     <h3 class="content-subhead">
-                        <i class="fa fa-rocket"></i>
-                        Get Started Quickly
+                        Long-Run Change
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        Most reading programs offer parents books and advice— then vanish. StoryTime follows a research-backed model of sticking with parents night after night to help them with the hardest part of the reading habit: keeping it up.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-mobile"></i>
-                        Responsive Layouts
+                        Reading is Fun
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        StoryTime sends short rhyming stories that segue into activities to get families talking, playing, and sharing, face-to-face. Reading’s fun— for both kids and parents.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-th-large"></i>
-                        Modular
+                        Reading is Easy
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        Parents no longer need to take a public bus to the library, guess at age-appropriate books, and remember to read every night. StoryTime breaks down this complex task into something simple and concrete that, each night, parents can act on.
                     </p>
                 </div>
                 <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
                     <h3 class="content-subhead">
-                        <i class="fa fa-check-square-o"></i>
-                        Plays Nice
+                        Simple Technology
                     </h3>
                     <p>
-                        Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                        Rather than introduce new technology and force parents to learn new habits, StoryTime relies on what over 6 billion people already have and use: mobile texting. 
                     </p>
                 </div>
             </div>
@@ -91,23 +81,20 @@
 
         <div class="ribbon l-box-lrg pure-g">
             <div class="l-box-lrg is-center pure-u-1 pure-u-md-1-2 pure-u-lg-2-5">
-                <img class="pure-img-responsive" alt="File Icons" width="300" src="img/common/file-icons.png">
+                <img class="pure-img-responsive" alt="File Icons" width="300" src="/HenokPhil.jpg">
             </div>
             <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
-                <h2 class="content-head content-head-ribbon">Laboris nisi ut aliquip.</h2>
+                <h2 class="author content-head content-head-ribbon">We're here to write a new story.</h2>
 
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor.
+                    We built StoryTime to erase the “word gap,” the fact that, by age three, children from poor families have heard 30 million fewer words than those from wealthier families. It sends children’s stories and early-learning  activities by text message to parents without books at home. Designed with Yale Child Study experts, it’s an early literacy program for the world’s kids— one that sticks with parents as they sing, play, and share with their kids night after night.
                 </p>
             </div>
         </div>
 
-        <div class="content">
-            <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
+        <div class="content" id="signup">
+            <h2 class="content-head is-center">This is a service for parents <strong>everywhere</strong>.</h2>
 
             <div class="pure-g">
                 <div class="l-box-lrg pure-u-1 pure-u-md-2-5" id="sign-up">
@@ -124,7 +111,7 @@
                             <label for="password">Your Password</label>
                             <input id="password" type="password" placeholder="Your Password">
 
-                            <button type="submit" class="pure-button">Sign Up</button>
+                            <button type="submit" class="button-large button-secondary pure-button">Sign Up</button>
                         </fieldset>
                     </form>
                 </div>
@@ -132,16 +119,12 @@
                 <div class="l-box-lrg pure-u-1 pure-u-md-3-5">
                     <h4>Contact Us</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat.
+                        We push our families to get in touch with us. StoryTime is not built just <strong>for</strong> familes, but <strong>with</strong> them. Email us at: <span style="color:#EB7260"> storytimect@gmail.com <span>
                     </p>
 
                     <h4>More Information</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
+                        Every parent wants to read to their child, but life makes it really hard. We want to make it easier for parents to build the habit so that, from the earliest years, they cognitively prepare their kids for lifetime growth and academic success.
                     </p>
                 </div>
             </div>
@@ -149,7 +132,7 @@
         </div>
 
         <div class="footer l-box is-center">
-            View the source of this layout to learn more. Made with love by the YUI Team.
+            StoryTime 
         </div>
 
     </div>
